[package]
name = "xcodeproj"
version = "0.2.10"
edition = "2021"
description = "xcodeproj reader and parser."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow                = "1.0.57"
tap                   = "1.0.1"
itertools = "0.10.3"

derive-deref-rs       = "0.1.1"
derive-new = "0.5.9"

tracing               = { version = "0.1.32", optional = true }
tracing-appender      = { version = "0.2.1",  optional = true }
tracing-subscriber    = { version = "0.3.9",  features = ["env-filter"], optional = true}
pest                  = { version  = "2.1.3", features = ["pretty-print", "serde"] }
pest_derive           = "2.1.0"
pest_consume          = "1.1.1"
paste = "1.0.7"

enum-as-inner = "0.5.0"
derive_is_enum_variant = "0.1.1"
enum_variant_macros = "0.2.0"
phf = "0.10.1"
serde = { version = "1.0.137", features = ["derive"] }
wax = "0.5.0"

[dev-dependencies]
tracing-test = "0.2.1"

[features]
default = [ "with_tracing" ]
with_tracing = [ "tracing", "tracing-appender", "tracing-subscriber" ]

[build-dependencies]
phf_codegen = "0.10.0"
